@@ -1,3 +1,7 @@
+2016/11/28 v148
+	1. Auto fade option added to quest list.
+	2. Chat Frame use a more clear style.
+
 2016/11/27 v147
 	1. Fix the micro menu not shown when get out of the vehicle.
 	2. Auto fade option added to minimap.
